# gamerhash-facade

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  GolemLib.sln  Readme.md  dummy-offer-overrides.json  modules.sh
.ci/: pack-build.sh
.github/workflows/: release.yml  tests.yml
Central/: Cargo.toml
Central/gh-client/: Cargo.toml
Central/gh-client/src/: control_api.rs  main.rs
Central/gh-server/: Cargo.toml
Central/gh-server/src/: main.rs  service_api.rs  worker_api.rs
DummyAiHttpServer/: README.md  README.txt
ExampleRunner/: ExampleRunner.csproj  Program.cs
FacadeApp/: FacadeApp.csproj  Program.cs
FacadeApp/Properties/: launchSettings.json
FacadeHeadlessApp/: Facade.cs  FacadeHeadlessApp.csproj
Golem/: ActivityLoop.cs  EventsPublisher.cs  Factory.cs  Golem.cs  Golem.csproj  InvoiceEventsLoop.cs  Job.cs  Jobs.cs  PaymentService.cs  ProviderConfigService.cs  Testing.cs
Golem.Package/: Args.cs  Golem.Package.csproj  Program.cs
Golem.Package/package/: dummy  ya-dummy-ai.json
Golem.Tests/: ErrorHandlingTest.cs  ErrorHandlingTests.cs  GlobalUsings.cs  Golem.IntegrationTests.csproj  GolemTests.cs  JobStatusTests.cs  JobTests.cs  LogFilesTest.cs  PresetConfigServiceTests.cs  PropertyChangeTests.cs  ProviderFailureHandlingTest.cs  StartStopTests.cs  Utils.cs  xunit.runner.json
Golem.Tests/Tools/: GolemPackageBuilder.cs  GolemRelay.cs  GolemRequestor.cs  GolemRunnable.cs  PropertyChangedHandler.cs  SampleApp.cs  test_key.json
Golem.Tools/: Console.cs  Golem.Tools.csproj  GolemCentralNet.cs  GolemPackageBuilder.cs  GolemRelay.cs  GolemRequestor.cs  GolemRunnable.cs  GolemViewModel.cs  PropertyChangedHandler.cs  SampleApp.cs  TestLogger.cs  test_key.plain
Golem.Tools/App/: app.py  app.py.bak  app.py.new  requirements.txt
Golem.Tools/resources/: example-runner.mainnet.signed.json  main_address.txt  main_key.plain  test_key_2.plain
Golem/Tools/: ChildProcessTracker.cs  DateTimeJsonConverter.cs  Exceptions.cs  JsonSerializerOptionsBuilder.cs
Golem/Yagna/: ActivityState.cs  EnvironmentBuilder.cs  Job.cs  Net.cs  PresetConfigService.cs  ProcessFactory.cs  Provider.cs  ProviderConfigService.cs  ProviderRulesService.cs  YagnaApi.cs  YagnaCliService.cs  YagnaOptionsFactory.cs  (+2 more)
GolemLib/: GolemLib.csproj  GolemPrice.cs  IFactory.cs  IGolem.cs  IJob.cs  Validation.cs  events.cs  golem.cs  job.cs  net.cs  types.cs
GolemLib.Tests/: GolemLib.Tests.csproj  TypesTests.cs
Mock/: Mock.csproj  MockGolem.cs  MockJob.cs
MockGUI/: App.axaml  App.axaml.cs  Converters.cs  GolemModel.cs  MainWindow.axaml  MainWindow.axaml.cs  MockGUI.csproj  Program.cs  app.manifest  readme.md
example/DummyAiHttpServer/: README.md  app.py  pyproject.toml  run.sh
example/ai-requestor/: .env  README.md  ai_runtime.py  conent.txt  list-offers.py  list-offers.sh  pyproject.toml  run-inference.sh  run-python.sh  run-task.sh  run-yagna.sh  setup-requestor.sh  vars.sh
scripts/: automatic.ps1  config.json  ya-automatic-ai.json
(+18 files in other folders)
