[package]
name = "gh-server"
version = "0.1.0"
edition = '2021'

[dependencies]
actix = { version = "0.13", default-features = false }
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
anyhow = "1.0"
log = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["time", "sync"] }

ya-client = "0.7"
