[tool.poetry]
name = "ai-requestor"
version = "0.1.0"
description = ""
authors = ["Staszek Krotki <16387248+staszek-krotki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#yapapi = "^0.12.0"
yapapi = { git = "https://github.com/golemfactory/yapapi", rev = "5bf31ce9145e07b1db117e2b1c54c52887b2d868" }
pillow = "^10.2.0"
requests = "^2.31.0"
alive_progress = "3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
